--- a/gallery.html
+++ b/gallery.html
@@ -27,19 +27,19 @@
                     <div class="collapse navbar-collapse col-8" id="navbarNav">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link"  href="/index_RU.html">ГЛАВНАЯ</a>
+                                <a class="nav-link"  href="/index.html">ГЛАВНАЯ</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="/gallery_RU.html">ГАЛЕРЕЯ</a>
+                                <a class="nav-link active" aria-current="page" href="/gallery.html">ГАЛЕРЕЯ</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="/projects_RU.html">ПРОЕКТЫ</a>
+                                <a class="nav-link" href="/projects.html">ПРОЕКТЫ</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="/certificates_RU.html">СЕРТИФИКАТЫ</a>
+                                <a class="nav-link" href="/certificates.html">СЕРТИФИКАТЫ</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="/contact_RU.html">КОНТАКТЫ</a>
+                                <a class="nav-link" href="/contact.html">КОНТАКТЫ</a>
                             </li>
                         </ul>                       
                     </div>
@@ -72,8 +72,8 @@
                 <p>02</p><span><p></p></span><p>05</p>
             </div>
             <div class="rows">
-                <span><a href="index_RU.html"><img src="/src/arrow-2-right-long.svg" alt="arrow-left"></a></span>
-                <span class="arrow-right"><a href="projects_RU.html"><img src="/src/arrow-2-right-long.svg" alt="arrow-right"></a></span>
+                <span><a href="index.html"><img src="/src/arrow-2-right-long.svg" alt="arrow-left"></a></span>
+                <span class="arrow-right"><a href="projects.html"><img src="/src/arrow-2-right-long.svg" alt="arrow-right"></a></span>
             </div>
         </span>
     </section>    
@@ -85,11 +85,11 @@
                 </div>
                 <div class="col-lg-2">
                     <h4>Информация</h4>
-                    <p><a href="index_RU.html">Главная</a></p>
-                    <p><a href="/gallery_RU.html">Галерея</a></p>
-                    <p><a href="/projects_RU.html">Проекты</a></p>
-                    <p><a href="/certificates_RU.html">Сертификаты</a></p>
-                    <p><a href="/contact_RU.html">Контакты</a></p>
+                    <p><a href="index.html">Главная</a></p>
+                    <p><a href="/gallery.html">Галерея</a></p>
+                    <p><a href="/projects.html">Проекты</a></p>
+                    <p><a href="/certificates.html">Сертификаты</a></p>
+                    <p><a href="/contact.html">Контакты</a></p>
                 </div>
                 <div class="col-lg-3">
                     <h4>Контакты</h4>
