--- a/index.html
+++ b/index.html
@@ -35,16 +35,16 @@
                                 <a class="nav-link active" aria-current="page" href="#home">ГЛАВНАЯ</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="/gallery_RU.html">ГАЛЕРЕЯ</a>
+                                <a class="nav-link" href="/gallery.html">ГАЛЕРЕЯ</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="/projects_RU.html">ПРОЕКТЫ</a>
+                                <a class="nav-link" href="/projects.html">ПРОЕКТЫ</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="/certificates_RU.html">СЕРТИФИКАТЫ</a>
+                                <a class="nav-link" href="/certificates.html">СЕРТИФИКАТЫ</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="/contact_RU.html">КОНТАКТЫ</a>
+                                <a class="nav-link" href="/contact.html">КОНТАКТЫ</a>
                             </li>
                         </ul>
                        
@@ -66,7 +66,7 @@
                </h1>
                <div class="rows no-mobile">
                 <span><img src="/src/arrow-2-right-long.svg" alt="arrow-left"></span>
-                <span class="arrow-right"><a href="gallery_RU.html"><img src="/src/arrow-2-right-long.svg" alt="arrow-right"></a><p class="line no-mobile"></p></span>
+                <span class="arrow-right"><a href="gallery.html"><img src="/src/arrow-2-right-long.svg" alt="arrow-right"></a><p class="line no-mobile"></p></span>
                </div>
                <div class="pages no-mobile">
                 <p>01</p><span><p></p></span><p>05</p>
@@ -82,7 +82,7 @@
                 </div>
                 <div class="rows">
                     <span><img src="/src/arrow-2-right-long.svg" alt="arrow-left"></span>
-                    <span class="arrow-right"><a href="gallery_RU.html"><img src="/src/arrow-2-right-long.svg" alt="arrow-right"></a></span>
+                    <span class="arrow-right"><a href="gallery.html"><img src="/src/arrow-2-right-long.svg" alt="arrow-right"></a></span>
                 </div>
             </span> 
         </div>
@@ -192,11 +192,11 @@
                 </div>
                 <div class="col-lg-2">
                     <h4>Информация</h4>
-                    <a href="index_RU.html">Главная</a>
-                    <a href="/gallery_RU.html">Галерея</a>
-                    <a href="/projects_RU.html">Проекты</a>
-                    <a href="/certificates_RU.html">Сертификаты</a>
-                    <a href="/contact_RU.html">Контакты</a>
+                    <a href="index.html">Главная</a>
+                    <a href="/gallery.html">Галерея</a>
+                    <a href="/projects.html">Проекты</a>
+                    <a href="/certificates.html">Сертификаты</a>
+                    <a href="/contact.html">Контакты</a>
                 </div>
                 <div class="col-lg-3">
                     <h4>Контакты</h4>
