--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@
            
         </div>
     </section>
-    <section id="home"></section>
-    <section class="project hero" class="container-fuild">
+    <section class="project hero" class="container-fuild" id="home">
         <div class="row">
             <div class="project-col col-left col-lg-4 d-flex ">
                <h1>
